# 1d-perlin

./: Cargo.toml
src/: main.rs  mod.rs  perlinish.rs  smooth.rs
